assets/css/rezultate.css
.main, .timeline, .container-r ul li {
  background-color: var(--bg-light);
}

.main {
  position: relative;
  padding: 80px 0 20px;
  min-height: calc(100vh - 60px);
  padding-top: 10em;
}

.iconita {
  display: block;
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
  filter: var(--results-icons);
}

.icon-box {
  position: absolute;
  top: 50%;
  right: 40px;
  transform: translateY(-50%);
  width: 50px;
  height: 50px;
}

.cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  padding: 8em 5vw;
}

.card-s {
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: var(--card-background);
  border-radius: 10px;
  box-shadow: 0 7px 25px rgba(0,0,0,0.08);
  position: relative;
  transition: 0.3s;
}

.number, .number-special {
  font-size: 45px;
  font-weight: 500;
  color: var(--primary);
}

.card-name {
  color: var(--primary);
  font-weight: 600;
}

.icon-box i {
  font-size: 45px;
  color: var(--primary);
}

.card-s:hover {
  transform: scale(1.03);
}

/* Timeline */
.timeline {
  padding-bottom: 200px;
  display: grid;
  place-items: center;
}

.timeline .heading {
  font-size: 30px;
  font-weight: 500;
  color: var(--primary);
  margin-bottom: 80px;
  position: relative;
}

.heading::after {
  content: "";
  position: absolute;
  width: 50%;
  height: 4px;
  left: 50%;
  bottom: -5px;
  background-image: var(--primary-gradient);
  transform: translateX(-50%);
}

.container-r {
  width: 80%;
  position: relative;
}

.container-r::after {
  content: "";
  position: absolute;
  width: 4px;
  height: 100%;
  background-image: linear-gradient(to bottom, #7b28ae, #ba12aa);
}

.container-r ul {
  list-style: none;
  padding: 0;
}

.container-r ul li {
  background-color: #d1c3e6;
  width: 50%;
  padding: 15px 20px;
  box-shadow: 1px 1px 25px #000;
  border-radius: 10px;
  margin-bottom: 30px;
  position: relative;
  z-index: 99;
}

.timeline-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.timeline-image {
  width: 100%;
  height: auto;
  max-width: 200px;
  max-height: 200px;
}

.timeline-text {
  padding-left: 20px;
}

.container-r ul li:nth-child(odd) {
  float: left;
  clear: right;
  transform: translateX(-30px);
  text-align: right;
}

.container-r ul li:nth-child(even) {
  float: right;
  clear: left;
  transform: translateX(30px);
}

.container-r ul li:nth-child(odd) .date { right: 20px; }
.container-r ul li:nth-child(even) .date { left: 20px; }

.container-r ul li .title-r {
  font-size: 22px;
  font-weight: 500;
  color: #7b28ae;
}

ul li p {
  font-size: 15px;
  color: #000;
  margin: 7px 0;
  line-height: 23px;
}

ul li .date {
  position: absolute;
  top: -40px;
  width: 135px;
  height: 35px;
  border-radius: 20px;
  color: #fff;
  background-image: var(--primary-gradient);
  display: grid;
  place-items: center;
  font-size: 15px;
}

.point, .point-2 {
  position: absolute;
  top: 0;
}

.point { width: 30px; height: 30px; }
.point-2 { width: 50px; height: 50px; opacity: 0.7; z-index: -2; }

.container-r ul li:nth-child(odd) .point { right: -32px; transform: translate(50%,-50%); }
.container-r ul li:nth-child(odd) .point-2 { right: -82px; transform: translate(-50%,-50%); }
.container-r ul li:nth-child(even) .point { left: -58px; transform: translate(50%,-50%); }
.container-r ul li:nth-child(even) .point-2 { left: -28px; transform: translate(-50%,-50%); }

/* Breakpoints */
@media (max-width:1224px) { .container-r { width: 85%; } }

@media (max-width:993px) {
  .container-r {
    width: 80%;
    transform: translateX(15px);
  }
  .container-r::after { left: 2px; }
  .container-r ul li {
    width: 100%;
    float: none;
    margin-bottom: 80px;
  }
  .timeline-container { flex-direction: column; }
  .timeline-image { max-width: 100%; }
  .timeline-text { padding-top: 20px; }
  .container-r ul li:nth-child(odd) {
    transform: translateX(0);
    text-align: left;
  }
  .container-r ul li:nth-child(even) .date,
  .container-r ul li:nth-child(odd) .date { left: 0px; }
  .container-r ul li:nth-child(even) .point,
  .container-r ul li:nth-child(even) .point-2,
  .container-r ul li:nth-child(odd) .point,
  .container-r ul li:nth-child(odd) .point-2 {
    left: -10px;
    top: -5px;
    transform: translate(-50%,-50%);
  }
  .container-r ul li:nth-child(even),
  .container-r ul li:nth-child(odd) {
    transform: translateX(14px);
  }
}

@media (max-width:768px) {
  .cards { grid-template-columns: repeat(2, 1fr); }
  .icon-box { width: 40px; height: 40px; }
  .number, .icon-box i { font-size: 30px; }
}

@media (max-width:480px) {
  .cards {
    grid-template-columns: 1fr;
    padding: 10px;
  }
  .card-s {
    flex-direction: column;
    align-items: flex-start;
    padding: 15px;
    margin-bottom: 20px;
  }
  .number, .number-special, .icon-box i { font-size: 30px; }
  .icon-box { width: 20px; height: 20px; }
}

